--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "vuepress": "^1.5.4"
+  },
+  "dependencies": {
+    "vuepress-theme-reco": "^1.5.5"
   }
 }
