--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "vuepress": "^1.5.4"
+    "vuepress": "^1.0.0-rc.1",
+    "vuepress-plugin-comment": "^0.7.3",
+    "vuepress-plugin-yuque": "^0.6.1"
   },
   "dependencies": {
     "vuepress-theme-reco": "^1.5.5"
