--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "vuepress": "^1.0.0-rc.1",
     "vuepress-plugin-comment": "^0.7.3",
-    "vuepress-plugin-yuque": "^0.6.1"
+    "vuepress-plugin-yuque": "^0.6.1",
+    "vuepress-theme-vdoing": "^1.4.4"
   },
   "dependencies": {
     "vuepress-theme-reco": "^1.5.5"
