--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "start": "nodemon --ext md,vue --watch .vuepress --watch . --exec vuepress dev docs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.4",
     "vuepress": "^1.0.0-rc.1",
-    "vuepress-plugin-comment": "^0.7.3",
     "vuepress-plugin-yuque": "^0.6.1",
+    "vuepress-plugin-comment": "^0.7.3",
     "vuepress-theme-vdoing": "^1.4.4"
   },
   "dependencies": {
