--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "cSpell.words": [
-    "cloudbase",
-    "gorvey",
-    "reco",
-    "vuepress",
-    "zizfg"
-  ]
+  "cSpell.words": ["cloudbase", "gorvey", "reco", "vuepress", "zizfg"]
 }
