--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "start": "nodemon --ext md,vue --watch .vuepress --watch . --exec vuepress dev docs"
+    "start": "npm run docs:dev"
   },
   "keywords": [],
   "author": "",
