--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.4",
-    "vuepress": "^1.0.0-rc.1",
+    "vuepress": "^1.6.0",
     "vuepress-plugin-comment": "^0.7.3",
     "vuepress-plugin-demo-container": "^0.2.0",
     "vuepress-plugin-yuque": "^0.6.1",
