--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
   "cSpell.words": [
     "cloudbase",
+    "egal",
+    "endregion",
     "gorvey",
+    "hasher",
     "instanceof",
+    "nodelist",
     "reco",
     "typora",
+    "udfff",
     "vuepress",
     "zizfg"
   ],
