--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vuepress-theme-vdoing": "^1.5.1"
   },
   "dependencies": {
+    "element-ui": "^2.13.2",
     "vuepress-plugin-demo-block": "^0.7.2"
   }
 }
